Branch the framework for R7 work with updated osgi classes, removed packageinfos, version set to 6.0.0-SNAPSHOT, and adaption to the new R7 resolver api changes.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/osgi-r7/framework@1825132 13f79535-47bb-0310-9956-ffa450edef68